--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -30,49 +30,78 @@
 on init
     write /sys/class/leds/ir/max_brightness 63
 
-on boot
-    chown gps system /sys/devices/platform/soc/890000.spi/spi_master/spi32766/spi32766.0/nstandby
-    chmod 0774 /sys/devices/platform/soc/890000.spi/spi_master/spi32766/spi32766.0/nstandby
-    chown gps system /dev/bbd_control
-    chmod 0774 /dev/bbd_control
-    chown gps system /dev/bbd_patch
-    chmod 0774 /dev/bbd_patch
-    chown gps system /dev/bbd_sensor
-    chmod 0774 /dev/bbd_sensor
+on fs
+    mkdir /dev/logfs 0771 system system
+    mount vfat /dev/block/bootdevice/by-name/logfs /dev/logfs noatime umask=006,uid=1000,gid=1000
+    chmod 644 /persist/audio/us_manual_cal
 
 on post-fs-data
-    mkdir /data/vendor/gps
-    mkdir /data/vendor/gps/log
-    mkdir /data/vendor/gps/log/gps
-    mkdir /data/vendor/gps/log/lhd
-    chown gps system /data/vendor/gps
-    chown gps system /data/vendor/gps/log
-    chown gps system /data/vendor/gps/log/gps
-    chown gps system /data/vendor/gps/log/lhd
-    chown gps system /dev/ttyBCM
-    chmod 775 /data/vendor/gps
-    chmod 775 /data/vendor/gps/log
-    chmod 770 /data/vendor/gps/log/gps
-    chmod 770 /data/vendor/gps/log/lhd
-    chmod 775 /dev/ttyBCM
+    mkdir /data/vendor/nnhal 0700 system system
+    mkdir /data/vendor/nfc 0770 nfc nfc
+    chmod 0644 /dev/elliptic0
+    chmod 0644 /dev/elliptic1
+    chmod 666 /sys/class/drm/card0-DSI-1/disp_count
+    chown system system /sys/class/drm/card0-DSI-1/dim_alpha
+    chown system system /sys/class/drm/card0-DSI-1/fod_ui_ready
+    chown system system /sys/class/drm/card0-DSI-1/dim_layer_enable
+    chown system system /sys/class/drm/card0-DSI-1/dimlayer_hbm_enabled
 
-service glgps /vendor/bin/glgps -c /vendor/etc/gpsconfig.xml
-    socket gps seqpacket 660 gps system
-    class late_start
-    user gps
-    group system inet sdcard_rw wakelock
-    ioprio rt 0
+on boot
+    chown system system /sys/class/drm/card0-DSI-1/disp_param
+    chown system system /sys/class/drm/card0-DSI-1/doze_backlight
 
-service ignss_2_0 /vendor/bin/ignss_2_0
-    class late_start
-    user system
-    group system inet sdcard_rw wakelock
+    chmod 0660 /dev/lirc0
+    chown system system /dev/lirc0
+    chown system system /sys/class/touch/tp_dev/fod_status
 
-service lhd /vendor/bin/lhd /vendor/etc/lhd.conf
-    class late_start
-    user gps
-    group system inet net_raw sdcard_rw wakelock
-    ioprio rt 0
+    chown system system /sys/class/backlight/panel0-backlight/brightness_clone
+
+    # USB controller configuration
+    setprop vendor.usb.qdss.inst.name "qdss"
+
+on charger
+    write /sys/module/lpm_levels/parameters/sleep_disabled 0
+    write /sys/devices/system/cpu/cpu0/online 1
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "userspace"
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 633600
+    write /sys/devices/system/cpu/cpu1/online 1
+    write /sys/devices/system/cpu/cpu1/cpufreq/scaling_governor "userspace"
+    write /sys/devices/system/cpu/cpu1/cpufreq/scaling_max_freq 633600
+    write /sys/devices/system/cpu/cpu2/online 0
+    write /sys/devices/system/cpu/cpu3/online 0
+    write /sys/devices/system/cpu/cpu4/online 0
+    write /sys/devices/system/cpu/cpu5/online 0
+    write /sys/devices/system/cpu/cpu6/online 0
+    write /sys/devices/system/cpu/cpu7/online 0
+    write /sys/module/msm_thermal/parameters/enabled "N"
+    mount ext4 /dev/block/bootdevice/by-name/persist /persist nosuid nodev barrier=1
+    start vendor.hvdcp_opti
+    setprop sys.usb.configfs 1
+
+service adsprpcd /vendor/bin/adsprpcd rootpd
+   class main
+   user system
+   group system
+
+service adsprpcd_audiopd /vendor/bin/adsprpcd audiopd
+   class main
+   user media
+   group media
+
+service adsprpcd_sensorspd /vendor/bin/adsprpcd sensorspd
+   class core
+   user system
+   group system
+
+service cdsprpcd /vendor/bin/cdsprpcd
+   class main
+   user system
+   group system
+
+service vendor.hvdcp_opti /vendor/bin/hvdcp_opti
+    class main
+    user root
+    group system wakelock
 
 service remosaic_daemon /vendor/bin/remosaic_daemon
     class late_start
