--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -30,6 +30,9 @@
 on init
     write /sys/class/leds/ir/max_brightness 63
 
+on init && property:ro.boot.hwc=GLOBAL
+    setprop ro.boot.product.hardware.sku grus_global
+
 on fs
     mkdir /dev/logfs 0771 system system
     mount vfat /dev/block/bootdevice/by-name/logfs /dev/logfs noatime umask=006,uid=1000,gid=1000
